[package]
name = "looklapi"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.47", features = ["full"] }
rudi = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
mongodb = "3.3"
parking_lot = "0.12"
lapin = "3.6"
rs-consul = "0.12"
redis = { version = "0.32", features = ["tokio-comp"] }
futures = "0.3"
looklapi-macro = { path = "../looklapi-macro" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-error = "0.2"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
