[package]
name = "looklapi"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.49", features = ["full"] }
rudi = "0.8"
anyhow = "1.0"
thiserror = "2.0"
inventory = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
mongodb = "3.4"
parking_lot = "0.12"
lapin = "3.7"
rs-consul = "0.13"
redis = { version = "1.0", features = ["tokio-comp", "json"] }
lazy_static = "1.4"
futures = "0.3"
looklapi-macro = { path = "../looklapi-macro" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-error = "0.2"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
image = "0.25"
fontdue = "0.7"
base64 = "0.22"
reqwest = { version = "0.13", features = ["blocking", "json"] }
